[package]
name = "spl_fishing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_fishing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
proc-macro2 = { version = "1.0.95"}
# fee_governance_hub = { git = "https://github.com/hey-its-slowly/fee_governance_hub.git", branch = "main", features=["no-entrypoint", "cpi", "devnet"]  }
fee_governance_hub = { path="../fee_governance_hub", features=["no-entrypoint", "cpi"] }

[net]
git-fetch-with-cli = true
